--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,11 +7,18 @@ html {
     // color: hsl(303, 10%, 53%);
     &__title {
         font-weight: 700;
-        font-size: 4rem;
+        font-size: 4.5rem;
         color: hsl(300, 43%, 22%);
     }
     
     &__caption {
         color: hsl(303, 10%, 53%);
+        line-height: 2.5rem;
+        font-size: 1.4rem;
     }
+}
+
+.rating-block {
+    font-weight: 700;
+    color: hsl(300, 43%, 22%);
 }
