--- a/sass/layout/_social-proof.scss
+++ b/sass/layout/_social-proof.scss
@@ -1,7 +1,7 @@
 .social-proof {
     background-image: url("/images/bg-pattern-bottom-desktop.svg");
     background-color: white;
-    height: 80%;
+    // height: 80%;
     position: absolute;
     top: 50%;
     left: 50%;
