--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,18 +1,29 @@
 .header {
     display: flex;
     height: 50%;
-    margin-bottom: 7rem;
+    margin-bottom: 6rem;
 
     &__message {
         width: 50%;
-        padding-right: 15rem;
+        // flex: 3;
     }
-
+    
     &__title {
-       margin-bottom: 1.5rem;
+        padding-right: 10rem;
+        margin-bottom: 1.5rem;
     }
 
     &__caption {
-        
+        padding-right: 11rem;
+    }
+
+    &__rating-container {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: flex-end;
+        padding-bottom: 3rem;
+        // height: 100%;
     }
 }
