--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,29 @@ html {
   .header__caption {
     color: #937b92;
     line-height: 2.5rem;
-    font-size: 1.4rem; }
+    font-size: 1.4rem;
+    font-weight: 500; }
 
 .rating-block {
   font-weight: 700;
   color: #502050; }
+
+.card {
+  color: white;
+  font-size: 1.2rem;
+  line-height: 2.1rem; }
+  .card__header {
+    font-size: 1.4rem;
+    font-weight: 500; }
+  .card span {
+    color: #ee68a4; }
+
+.card-container {
+  display: flex; }
+  .card-container > :first-child {
+    margin-left: 0; }
+  .card-container > :last-child {
+    margin-right: 0; }
 
 .social-proof {
   background-image: url("/images/bg-pattern-bottom-desktop.svg");
@@ -84,3 +102,21 @@ html {
 
 .rating-block--2 {
   transform: translateX(-4rem); }
+
+.card {
+  background-color: #502050;
+  margin: 0 1.2rem;
+  border-radius: .5rem;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 3.5rem; }
+  .card span {
+    display: block; }
+  .card img {
+    border-radius: 50%;
+    height: 5rem;
+    margin-right: 2.5rem; }
+  .card__content {
+    margin: 3rem 0 .8rem 0; }
+  .card__header {
+    padding-top: .5rem; }
