--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,11 @@
 @import "base/base";
 @import "base/typography";
 
-@import "layout/cardContainer";
+@import "layout/card-container";
 @import "layout/social-proof";
 @import "layout/header";
 
-@import "components/rating-block"
+@import "components/rating-block";
+@import "components/card";
 
 
