finished mobile view, just need to fix attribution bs

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -19,3 +19,8 @@ body {
     // background-image: url("/images/bg-pattern-bottom-desktop.svg");
     // background-size: cover;
 }
+
+.attribution {
+    padding: 3rem;
+    // bottom: 0px;
+}
