--- a/sass/layout/_card-container.scss
+++ b/sass/layout/_card-container.scss
@@ -1,11 +1,18 @@
 .card-container {
     display: flex;
     
-    > :first-child {
-        margin-left: 0;
-    }
+    @include respond(tab-land) {
+        > :first-child {
+            margin-left: 0;
+        }
 
-    > :last-child {
-        margin-right: 0; 
+        > :last-child {
+            margin-right: 0; 
+        }
+    }
+    
+
+    @include respond(phone) {
+        flex-direction: column;
     }
 }
