--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,18 +3,36 @@
     height: 50%;
     margin-bottom: 6rem;
 
+    @include respond(phone) {
+        display: block;
+        text-align: center;
+        margin: 7rem 3rem 1rem 3rem;
+    }
+
     &__message {
         width: 50%;
-        // flex: 3;
+
+        @include respond(phone) {
+            width: 100%;
+        }
     }
     
     &__title {
         padding-right: 10rem;
-        margin-bottom: 1.5rem;
+        margin-bottom: 1rem;
+        
+        @include respond(phone) {
+            padding-right: 0;
+        }
     }
 
     &__caption {
         padding-right: 11rem;
+
+        @include respond(phone) {
+            padding-right: 0;
+            margin: 2rem 0;
+        }
     }
 
     &__rating-container {
@@ -24,6 +42,13 @@
         align-items: flex-end;
         justify-content: flex-end;
         padding-bottom: 3rem;
-        // height: 100%;
+
+        @include respond(phone) {
+            width: 100%;
+            align-items: center;
+            padding-bottom: 0;
+            margin-bottom: 3rem;
+        }
     }
+
 }
