--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import "abstracts/mixins"; // make sure abstracts come first so imports are detected
+
 @import "base/base";
 @import "base/typography";
 
@@ -7,5 +9,3 @@
 
 @import "components/rating-block";
 @import "components/card";
-
-
